<?xml version="1.0" encoding="utf-8"?>
<com.ece493.group5.adjustableaudio.views.HearingTestView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HearingTestActivity">

    <LinearLayout
        android:id="@+id/hearing_test_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="fill"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hearing_test_title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_hearing_test"
            android:textColor="@color/colorAccent"
            android:textSize="24dp" />

        <LinearLayout
            android:id="@+id/progress_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hearing_test_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/caption_hearing_test_progress"
                android:textColor="@color/lightGrey"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/hearing_test_ear_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/label_hearing_test_left_ear"
                android:textColor="@color/lightGrey"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/hearing_test_progress_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/hearing_test_progress_placeholder"
                android:textColor="@color/lightGrey"
                android:textSize="16dp" />

            <SeekBar
                android:id="@+id/hearing_test_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progressTint="@color/colorAccent"
                android:thumbTint="@color/colorAccent"
                android:max="80"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/beep_ack_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/countdown_info_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/caption_countdown_info"
                android:textColor="@color/lightGrey"
                android:textSize="16dp" />

            <LinearLayout
                android:id="@+id/countdown_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/hearing_test_countdown_integer_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hearing_test_beep_countdown_integer_placeholder"
                    android:textColor="@color/lightGrey"
                    android:textSize="40dp" />

                <TextView
                    android:id="@+id/hearing_test_countdown_separator_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hearing_test_beep_countdown_decimal_point"
                    android:textColor="@color/lightGrey"
                    android:textSize="40dp" />
                <TextView
                    android:id="@+id/hearing_test_countdown_decimal_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hearing_test_beep_countdown_decimal_placeholder"
                    android:textColor="@color/lightGrey"
                    android:textSize="40dp" />
            </LinearLayout>



            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/hearing_test_beep_ack_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorAccent"
                android:src="@drawable/ic_hearing_test_black_24dp"
                android:visibility="gone"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/hearing_test_start_test_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorAccent"
                android:src="@drawable/ic_play_arrow_grey_24dp"
                android:visibility="visible"/>

        </LinearLayout>

    </LinearLayout>

</com.ece493.group5.adjustableaudio.views.HearingTestView>