<resources>
    <string name="app_name">AdjustableAudio</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_hearing_test">Hearing Test</string>
    <string name="title_microphone">Microphone</string>
    <string name="title_media_player">Media Player</string>
    <string name="title_settings">Settings</string>
    <string name="title_equalizer">Equalizer</string>
    <string name="title_volume">Volume</string>
    <string name="title_band_32">32</string>
    <string name="title_global">Global</string>
    <string name="title_left">Left\n(%d%%)</string>
    <string name="title_right">Right\n(%d%%)</string>
    <string name="title_preset">Preset</string>
    <string name="label_left_audio_balance">L</string>
    <string name="label_right_audio_balance">R</string>
    <string name="artist_title_placeholder">Artist</string>
    <string name="song_title_placeholder">Song Title</string>
    <string name="title_virtual_audiologist">Virtual Audiologist</string>
    <string name="caption_take_hearing_test">Take a new hearing test!</string>
    <string name="caption_your_hearing_tests">Your hearing test results:</string>
    <string name="button_change_name">Change Name</string>
    <string name="button_delete">Delete</string>
    <string name="button_share">Share</string>
    <string name="button_export_to_audio_setting">Export to Audio Setting</string>
    <string name="hearing_test_result_name_placeholder">Hearing Test Name</string>
    <string name="caption_hearing_test_progress">Progress</string>
    <string name="hearing_test_progress_placeholder">0/16</string>
    <string name="caption_countdown_info">Test Starting In: </string>
    <string name="caption_next_beep">Next Beep In: </string>
    <string name="hearing_test_beep_countdown_integer_placeholder">2</string>
    <string name="hearing_test_beep_countdown_decimal_point">.</string>
    <string name="hearing_test_beep_countdown_decimal_placeholder">0</string>
    <string name="label_first_freq_band">30 - 120 Hz</string>
    <string name="label_second_freq_band">120 - 460 Hz</string>
    <string name="label_third_freq_band">460 - 1800 Hz</string>
    <string name="label_fourth_freq_band">1800 - 7000 Hz</string>
    <string name="label_fifth_freq_band">7000 - 20000 Hz</string>
    <string name="noise_filter">Noise Filter</string>
    <string name="speech_focus">Speech Focus</string>
    <string name="normal">Normal</string>
    <string name="title_permissions_dialog">Permissions Required</string>
    <string name="negative_button_dialog">CANCEL</string>
    <string name="positive_button_dialog">OK</string>
    <string name="dialog_msg_perms_main">Storage and Microphone Permissions are Required for this Application</string>
    <string name="toast_msg_permissions">Go to settings and enable permissions</string>
    <string name="dialog_msg_permission_storage">Storage permission is required for the media player. Go to settings and enable permissions!</string>
    <string name="dialog_msg_perms_record">Record audio permissions are required for the hearing aid. Go to settings and enable permissions!</string>
    <string name="dialog_msg_add_preset">Please Enter a Name for the Equalizer Setting</string>
    <string name="title_dialog_add_preset">Add an Equalizer Setting</string>
    <string name="dialog_msg_preset_rename">Please Enter a New Name for the Equalizer Setting</string>
    <string name="title_dialog_preset_rename">Rename the Equalizer Setting</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="resume_button">Resume</string>
    <string name="cancel_test_button">Cancel Test</string>
    <string name="error_delete_default">Sorry, Default Setting Can Not Be Deleted</string>
    <string name="error_rename_default">Sorry, Default Setting Can Not Be Renamed</string>
    <string name="title_dialog_new_test_result">New Hearing Test Result</string>
    <string name="dialog_msg_new_test_result">Please Enter a Name for the Hearing Test Result</string>
    <string name="title_dialog_rename_test_result">Rename this Hearing Test Result</string>
    <string name="dialog_msg_rename_test_result">Please Enter a New Name for this Hearing Test Result</string>
    <string name="title_dialog_delete_test_result">Delete this Hearing Test Result</string>
    <string name="dialog_msg_delete_test_result">Are you sure? The result cannot be recovered after deleting</string>
    <string name="title_dialog_cancel_hearing_test">Cancel this Hearing Test?</string>
    <string name="dialog_msg_cancel_hearing_test">Are you sure? All progress will be lost</string>
    <string name="title_disclaimer">Disclaimer</string>
    <string name="agreement_disclaimer">I have read and understand the above disclaimer.</string>
    <string name="continue_button">Continue</string>
    <string name="title_dialog_hearing_test_insructions">Hearing Test Instructions</string>
    <string name="dialog_msg_hearing_test_instructions">To collect accurate results, please set your phone volume to max and take the test in a quiet room.\n\nSounds will play at increasing volume levels each second. Please press the button when you hear a sound.</string>
    <string name="got_it">Got it!</string>
    <string name="label_hearing_test_left_ear">Left</string>
    <string name="label_hearing_test_right_ear">Right</string>
    <string name="button_revert">REVERT</string>
    <string name="button_apply">APPLY</string>
</resources>
