...
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/caption_take_hearing_test"
            android:textSize="16dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/new_hearing_test_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/colorAccent"
...
            android:layout_marginTop="20dp"
            android:text="@string/caption_your_hearing_tests"
            android:textColor="@color/colorAccent"
            android:textSize="20dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hearing_test_result_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:divider="@color/cardview_dark_background"
            android:dividerHeight="2dp" />
...
